crates/wac-parser/tests/resolution/fail/missing-target-export/foo/bar/bar.wit
package foo:bar;

world baz {
    export hello: func() -> string;
}
